--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -7,71 +9,90 @@
 
 html, body {
     height: 100%;
+    scroll-behavior: smooth;
+    scroll-behavior: smooth !important;
+    scroll-snap-type: y mandatory;
+    overscroll-behavior-y: contain;
+    scroll-padding-top: 80px;
 }
 
 main {
     height: 100%;
-    overflow-y: scroll; /* Enable vertical scrolling */
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
+}
+
+section {
+    scroll-snap-align: start;
 }
 
 .page1 {
-    /* Might want to reduce the size of the image */
-    height: 150vh; /* Make each section occupy the full viewport height */
-    display: flex;
+    height: 150vh;
     justify-content: center;
+    display: flex; /* Add this line */
+    flex-direction: column; /* Add this line */
     align-items: center;
-    font-size: 3rem;
-    background-color: whitesmoke;
-    /*background-image: url(/images/backgrounds.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;*/
+    background-color: rgb(209, 151, 193);
 }
+.page1 h1{
+    font-family: 'Rubik', sans-serif;
+    text-align: center;
+    font-size: 5rem;
+    color:#fff; 
+    padding-bottom: 55px ;
+
+} 
+
+.onedes {
+    display: flex; /* Add this line */
+    flex-direction: column; /* Add this line */
+    align-items: center;
+    
+}
+
+.onedes p{
+    font-family: 'Roboto Mono', monospace;
+    text-align: center;
+    display:block;
+    font-size: 1.23rem;
+    color: #fff;
+    margin-bottom: 30px;
+}
+
+
+
 .page2 {
-    /* Might want to reduce the size of the image */
-    height: 150vh; /* Make each section occupy the full viewport height */
+    
+    height: 150vh;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 3rem;
     background-color: lightgreen;
-    /*background-image:url(/images/health.jpg);
-    background-size:cover;
-    background-position: center;
-    background-repeat: no-repeat;*/
 }
+
 .page3 {
-    /* Might want to reduce the size of the image */
-    height: 150vh; /* Make each section occupy the full viewport height */
+    height: 150vh;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 3rem;
     background-color: cornflowerblue;
-    /*background-image:url(/images/consult.jpg);
-    background-size:cover;
-    background-position: center;
-    background-repeat: no-repeat;*/
-
 }
+
 .page4 {
-    /* Might want to reduce the size of the image */
-    height: 150vh; /* Make each section occupy the full viewport height */
+    height: 150vh;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 3rem;
     background-color: salmon;
-    /*background-image:url(/images/meds.jpg);
-    background-size:cover;
-    background-position: center;
-    background-repeat: no-repeat; */
 }
+
 .sidebar {
     position: fixed;
-    top: 50%;
+    top: 100%; /* Adjust the top value as needed */
     right: 10px;
-    transform: translateY(-50%);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -83,7 +104,7 @@ main {
     width: 22.5px;
     height: 22.5px;
     background-color: transparent;
-    border: 1px solid #ddd;
+    border: 1.5px solid #ffffff;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -94,12 +115,12 @@ main {
 }
 
 .sidebar-button.active {
-    background-color: #ddd;
+    background-color: #ffffff;
     color: #000;
 }
 
 .sidebar-button:hover {
-    background-color: #ddd;
+    background-color: #ffffff;
     color: #000;
 }
 
@@ -110,85 +131,92 @@ header {
     left: 0;
     width: 100%;
     z-index: 999;
-  }
-  
-  .navbar {
+}
+
+.navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: transparent;
     padding: 20px;
     transition: background-color 0.3s;
-  }
-  
-  .logo a {
+}
+
+.logo a {
     font-size: 1.5rem;
     color: #fff;
     text-decoration: none;
     font-weight: bold;
-  }
-  
-  .links {
+}
+
+.links {
+    margin: 0;
+    padding: 0;
     list-style: none;
     display: flex;
-  }
-  
-  .links li {
+}
+
+.links li {
     margin-left: 20px;
-  }
-  
-  .links li a {
+}
+
+.links li a {
     color: #fff;
     text-decoration: none;
     font-weight: bold;
-  }
-  
-  .action_btn {
+}
+
+.action_btn {
+    display: inline-block;
     background-color: #fff;
     color: #000;
     padding: 10px 20px;
     border-radius: 5px;
     text-decoration: none;
     transition: background-color 0.3s;
-  }
-  
-  .toggle_button {
-    display: none;
-  }
-  
-  /* Change navbar background on scroll */
-  .navbar.scrolled {
-    background-color: #ffffff;
-  }
-  
-  .navbar.scrolled .logo a,
-  .navbar.scrolled .links li a {
+}
+.btn{
+    
+    background-color:rgb(227, 185, 231);
     color: #000;
-  }
-  
-  .navbar.scrolled .action_btn {
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: background-color 0.3s;
+}
+
+/* Change navbar background on scroll */
+.navbar.scrolled {
+    background-color: #ffffff;
+}
+
+.navbar.scrolled .logo a,
+.navbar.scrolled .links li a {
+    color: #000;
+}
+
+.navbar.scrolled .action_btn {
     background-color: transparent;
     color: #fff;
-  }
-  
-  /* Media query for responsive design */
-  @media screen and (max-width: 768px) {
+}
+
+/* Media query for responsive design */
+@media screen and (max-width: 768px) {
     .toggle_button {
-      display: block;
+        display: block;
     }
-  
+
     .links {
-      display: none;
+        display: none;
     }
-  
+
     .links.active {
-      display: flex;
-      flex-direction: column;
+        display: flex;
+        flex-direction: column;
     }
-  
+
     .links.active li {
-      margin-left: 0;
-      margin-bottom: 10px;
+        margin-left: 0;
+        margin-bottom: 10px;
     }
-  }
-  
+}
