--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;400&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -33,6 +34,7 @@ section {
     flex-direction: column; /* Add this line */
     align-items: center;
     background-color: rgb(209, 151, 193);
+ 
 }
 .page1 h1{
     font-family: 'Rubik', sans-serif;
@@ -60,16 +62,53 @@ section {
 }
 
 
-
 .page2 {
     
     height: 150vh;
-    display: flex;
     justify-content: center;
+    display: flex; /* Add this line */
+    flex-direction: column; /* Add this line */
     align-items: center;
-    font-size: 3rem;
-    background-color: lightgreen;
+    padding-bottom: 500px;
+    background-color: rgb(122, 206, 122);
 }
+.page2 h1{
+    font-family: 'Rubik', sans-serif;
+    text-align: center;
+    font-size: 5rem;
+    color:#fff; 
+    padding-top: 425px ;
+    padding-bottom:60px;
+
+}
+
+.twodes {
+    display: flex; /* Add this line */
+    flex-direction: column; /* Add this line */
+    align-items: center;
+    
+}
+
+.twodes p{
+    font-family: 'Roboto Mono', monospace;
+    text-align: center;
+    display:block;
+    font-size: 1.5rem;
+    color: #fff;
+    margin-bottom: 30px;
+    
+    
+}
+.twodes li{
+    font-family: 'Work Sans', sans-serif;
+    text-align: center;
+    font-size: 1.165rem;
+    padding-right: 30px;
+    padding-top: 40px;
+    color: #fff;
+    margin-bottom: 30px;
+}
+
 
 .page3 {
     height: 150vh;
@@ -178,7 +217,17 @@ header {
 .btn{
     
     background-color:rgb(227, 185, 231);
-    color: #000;
+    color: white ;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: background-color 0.3s;
+}
+
+.btn2{
+    
+    background-color:lightgreen;
+    color:white ;
     padding: 10px 20px;
     border-radius: 5px;
     text-decoration: none;
